# fwatch

./: .gitignore  CMakeLists.txt  README.md
include/: command_router.hpp  comparator.hpp  hasher.hpp  reporter.hpp  scanner.hpp  snapshot.hpp  snapshotbuilder.hpp
include/commands/: command.hpp  command_header.hpp  help.hpp  init.hpp  record.hpp  scan.hpp  status.hpp
src/: command_router.cpp  comparator.cpp  hasher.cpp  main.cpp  reporter.cpp  scanner.cpp  snapshot.cpp  snapshotbuilder.cpp
src/commands/: help.cpp  init.cpp  record.cpp  scan.cpp  status.cpp
